test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: mywebapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting
            port:
              number: 80
  - host: my-backend.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
